--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homework 10</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="96x96"
+      href="./favicon/icons8-globe-color-96.png"
+    />
   </head>
   <body>
-    <input type="text" id="search-box" />
-    <ul class="country-list"></ul>
-    <div class="country-info"></div>
+    <div class="countryFinder-container">
+      <h1 class="countryFinder-header">country info finder</h1>
+      <input
+        type="text"
+        id="search-box"
+        placeholder="type first letters of country u lookin' for"
+      />
+      <ul class="country-list"></ul>
+      <div class="country-info"></div>
+    </div>
 
     <script src="index.js" type="module"></script>
   </body>
